WIP: Remove UnionTypeObjectArchetype.Builder
Here we make a preparatory step of coverting UnionTypeObjectArchetype
into a record, taking its associated builders out of the picture.

Rename UnionTypeObjectBuilder to UnionTypeObjectArchetypeBuilder, as was
intended in its rename from TypeObjectCreator: its name now cannot be
with {Codegen,Runtime}UnionTypeObjectArchetypeBuilder.

We also ditch use of GeneratedProperty and expose typePropertyTypes() to
complement typePropertyNames().

// FIXME: the aim is to retain the semantics as much as possible, while
//        modernizing what communicate from binding-generator to
//        binding-codegen

JIRA: YANGTOOLS-1621
Change-Id: I9442a4c0c9e394512c77139f4da35540a7a7da5b
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>