@@ -11,19 +11,17 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.opendaylight.yangtools.binding.generator.impl.SupportTestUtil.containsAttributes;
 import static org.opendaylight.yangtools.binding.generator.impl.SupportTestUtil.containsMethods;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.opendaylight.yangtools.binding.model.api.BitsTypeObjectArchetype;
-import org.opendaylight.yangtools.binding.model.api.GeneratedProperty;
 import org.opendaylight.yangtools.binding.model.api.GeneratedTransferObject;
 import org.opendaylight.yangtools.binding.model.api.GeneratedType;
 import org.opendaylight.yangtools.binding.model.api.JavaTypeName;
 import org.opendaylight.yangtools.binding.model.api.UnionTypeObjectArchetype;
+import org.opendaylight.yangtools.binding.model.ri.BaseYangTypes;
 import org.opendaylight.yangtools.yang.common.QName;
 import org.opendaylight.yangtools.yang.test.util.YangParserTestUtils;
 
@@ -50,58 +48,50 @@ class BitAndUnionTOEnclosingTest {
         // nested types in leaf
         final var lfLeafs = enclosedTypes.stream()
             .filter(genType -> genType.simpleName().equals("Lf"))
-            .map(genType -> assertInstanceOf(GeneratedTransferObject.class, genType))
-            .collect(Collectors.toList());
+            .map(genType -> assertInstanceOf(UnionTypeObjectArchetype.class, genType))
+            .toList();
         assertEquals(1, lfLeafs.size(), "Lf TO has incorrect number of occurences.");
         final var lfLeaf = lfLeafs.getFirst();
         assertEquals(
             JavaTypeName.create("org.opendaylight.yang.gen.v1.urn.bit.union.in.leaf.rev130626", "ParentContainer"),
             lfLeaf.name().immediatelyEnclosingClass());
 
-        assertEquals(2, lfLeaf.getProperties().size(), "Lf generated TO has incorrect number of properties");
-        containsAttributes(lfLeaf, true, true, true, new NameTypePattern("string", "String"));
-        containsAttributes(lfLeaf, true, false, true, new NameTypePattern("lf$1", "Lf$1"));
-
         // nested types in Lf
         final var lfTypes = lfLeaf.getEnclosedTypes();
         assertEquals(1, lfTypes.size());
 
-        final var lf1Leaf = lfTypes.getFirst();
+        final var lf1Leaf = assertInstanceOf(UnionTypeObjectArchetype.class, lfTypes.getFirst());
         assertEquals("Lf$1", lf1Leaf.simpleName());
         assertEquals(
             "org.opendaylight.yang.gen.v1.urn.bit.union.in.leaf.rev130626.ParentContainer.Lf",
             lf1Leaf.name().immediatelyEnclosingClass().toString());
 
-        final var lf1gto = assertInstanceOf(GeneratedTransferObject.class, lf1Leaf);
-        assertEquals(4, lf1Leaf.getProperties().size(), "Lf$1 generated TO has incorrect number of properties");
-        containsAttributes(lf1gto, true, true, true, new NameTypePattern("uint32", "Uint32"));
-        containsAttributes(lf1gto, true, true, true, new NameTypePattern("int8", "Byte"));
-        containsAttributes(lf1gto, true, true, true, new NameTypePattern("string", "String"));
-        containsAttributes(lf1gto, true, false, true, new NameTypePattern("lf$2", "Lf$2"));
+        assertEquals(List.of("string", "lf$1"), lfLeaf.typePropertyNames());
+        assertEquals(List.of(BaseYangTypes.STRING_TYPE, lf1Leaf), lfLeaf.typePropertyTypes());
 
         // nested types in Lf1
         final var lf1Types = lf1Leaf.getEnclosedTypes();
         assertEquals(1, lf1Types.size());
 
-        final var lf2Leaf = lf1Types.get(0);
+        final var lf2Leaf = assertInstanceOf(UnionTypeObjectArchetype.class, lf1Types.getFirst());
         assertEquals("Lf$2", lf2Leaf.simpleName());
         assertEquals("org.opendaylight.yang.gen.v1.urn.bit.union.in.leaf.rev130626.ParentContainer.Lf.Lf$1",
             lf2Leaf.name().immediatelyEnclosingClass().toString());
+        assertEquals(List.of("string", "uint64"), lf2Leaf.typePropertyNames());
+        assertEquals(List.of(BaseYangTypes.STRING_TYPE, BaseYangTypes.UINT64_TYPE), lf2Leaf.typePropertyTypes());
 
-
-        final var lf2gto = assertInstanceOf(GeneratedTransferObject.class, lf2Leaf);
-        assertEquals(2, lf2Leaf.getProperties().size(), "Lf generated TO has incorrect number of properties");
-        containsAttributes(lf2gto, true, true, true, new NameTypePattern("string", "String"));
-        containsAttributes(lf2gto, true, true, true, new NameTypePattern("uint64", "Uint64"));
+        assertEquals(List.of("uint32", "int8", "string", "lf$2"), lf1Leaf.typePropertyNames());
+        assertEquals(List.of(BaseYangTypes.UINT32_TYPE, BaseYangTypes.INT8_TYPE, BaseYangTypes.STRING_TYPE, lf2Leaf),
+            lf1Leaf.typePropertyTypes());
     }
 
     @Test
     void testNestedTypesInTypedef() {
-        GeneratedTransferObject<?> typeUnionTypedef = null;
+        UnionTypeObjectArchetype typeUnionTypedef = null;
         int typeUnionTypedefCounter = 0;
 
         for (var genType : genTypes) {
-            if (genType.simpleName().equals("TypeUnion") && genType instanceof GeneratedTransferObject gto) {
+            if (genType.simpleName().equals("TypeUnion") && genType instanceof UnionTypeObjectArchetype gto) {
                 typeUnionTypedef = gto;
                 typeUnionTypedefCounter++;
             }
@@ -115,41 +105,29 @@ class BitAndUnionTOEnclosingTest {
         assertEquals("org.opendaylight.yang.gen.v1.urn.bit.union.in.leaf.rev130626", typeUnionTypedef.packageName(),
             "TypeUnion has incorrect package name.");
 
-        assertEquals(2, typeUnionTypedef.getProperties().size(),
-            "TypeUnion generated TO has incorrect number of properties");
-        containsAttributes(typeUnionTypedef, true, true, true, new NameTypePattern("string", "String"));
-        containsAttributes(typeUnionTypedef, true, false, true, new NameTypePattern("typeUnion$1", "TypeUnion$1"));
-
         final var nestedUnions = typeUnionTypedef.getEnclosedTypes();
         assertEquals(1, nestedUnions.size(), "Incorrect number of nested unions");
-
-        final var typeUnion1 = nestedUnions.getFirst();
+        final var typeUnion1 = assertInstanceOf(UnionTypeObjectArchetype.class, nestedUnions.getFirst());
         assertEquals("TypeUnion$1", typeUnion1.simpleName());
         assertEquals("org.opendaylight.yang.gen.v1.urn.bit.union.in.leaf.rev130626", typeUnion1.packageName(),
             "TypeUnion$1 has incorrect package name.");
-        assertEquals(4, typeUnion1.getProperties().size(),
-            "TypeUnion1 generated TO has incorrect number of properties");
 
-        final var typeUnion1gto = assertInstanceOf(GeneratedTransferObject.class, typeUnion1);
-        containsAttributes(typeUnion1gto, true, true, true, new NameTypePattern("uint32", "Uint32"));
-        containsAttributes(typeUnion1gto, true, true, true, new NameTypePattern("int8", "Byte"));
-        containsAttributes(typeUnion1gto, true, true, true, new NameTypePattern("string", "String"));
-        containsAttributes(typeUnion1gto, true, false, true, new NameTypePattern("typeUnion$2", "TypeUnion$2"));
-
+        assertEquals(List.of("string", "typeUnion$1"), typeUnionTypedef.typePropertyNames());
+        assertEquals(List.of(BaseYangTypes.STRING_TYPE, typeUnion1), typeUnionTypedef.typePropertyTypes());
 
         final var nestedUnions1 = typeUnion1.getEnclosedTypes();
         assertEquals(1, nestedUnions1.size());
-
-        final var typeUnion2 = nestedUnions1.get(0);
+        final var typeUnion2 = assertInstanceOf(UnionTypeObjectArchetype.class, nestedUnions1.getFirst());
         assertEquals("TypeUnion$2", typeUnion2.simpleName());
         assertEquals("org.opendaylight.yang.gen.v1.urn.bit.union.in.leaf.rev130626", typeUnion2.packageName(),
             "TypeUnion$2 has incorrect package name.");
-        assertEquals(2, typeUnion2.getProperties().size(),
-            "TypeUnion2 generated TO has incorrect number of properties");
 
-        final var typeUnion2gto = assertInstanceOf(GeneratedTransferObject.class, typeUnion2);
-        containsAttributes(typeUnion2gto, true, true, true, new NameTypePattern("string", "String"));
-        containsAttributes(typeUnion2gto, true, true, true, new NameTypePattern("uint64", "Uint64"));
+        assertEquals(List.of("uint32", "int8", "string", "typeUnion$2"), typeUnion1.typePropertyNames());
+        assertEquals(List.of(BaseYangTypes.UINT32_TYPE, BaseYangTypes.INT8_TYPE, BaseYangTypes.STRING_TYPE, typeUnion2),
+            typeUnion1.typePropertyTypes());
+
+        assertEquals(List.of("string", "uint64"), typeUnion2.typePropertyNames());
+        assertEquals(List.of(BaseYangTypes.STRING_TYPE, BaseYangTypes.UINT64_TYPE), typeUnion2.typePropertyTypes());
     }
 
     @Test
@@ -184,24 +162,10 @@ class BitAndUnionTOEnclosingTest {
         assertEquals(QName.create("urn:bit:union:in:leaf", "2013-06-26", "bits"), bitsDef.getQName());
         assertEquals(3, bitsDef.getBits().size());
 
-        GeneratedProperty uint32Property = null;
-        GeneratedProperty stringProperty = null;
-        GeneratedProperty uint8Property = null;
-        for (var genProperty : unionLeaf.getProperties()) {
-            if (genProperty.getName().equals("int32")) {
-                uint32Property = genProperty;
-            } else if (genProperty.getName().equals("string")) {
-                stringProperty = genProperty;
-            } else if (genProperty.getName().equals("uint8")) {
-                uint8Property = genProperty;
-            }
-        }
+        assertEquals(List.of(), unionLeaf.getEnclosedTypes());
+        assertEquals(List.of("int32", "string", "string", "string", "uint8"), unionLeaf.typePropertyNames());
+        assertEquals(List.of(BaseYangTypes.INT32_TYPE, BaseYangTypes.STRING_TYPE, BaseYangTypes.UINT8_TYPE),
+            unionLeaf.typePropertyTypes());
 
-        assertNotNull(uint32Property, "uint32 property wasn't found");
-        assertEquals("Integer", uint32Property.getReturnType().simpleName());
-        assertNotNull(stringProperty, "string property wasn't found");
-        assertEquals("String", stringProperty.getReturnType().simpleName());
-        assertNotNull(uint8Property, "uint8 property wasn't found");
-        assertEquals("Uint8", uint8Property.getReturnType().simpleName());
     }
 }
